fixing listing spacing

--- a/WebApp/components/listingsPage/listingsPage.scss
+++ b/WebApp/components/listingsPage/listingsPage.scss
@@ -26,4 +26,5 @@ Purpose: Spacing for the listings grid
   display: flex;
   flex-flow: row wrap;
   z-index: 0;
+  background: $grey70;
 }
